<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce_the_name_of_the_user"
        android:textColor="@color/red"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:hint="@string/username"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="8dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_image"
        android:textColor="@color/red"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btn_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnChooseImage"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/frPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@color/red" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>